Refactor JS file names

--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
         This difference is known as a phase shift.
       </p>
     </li>
+    <li>
+      <h3><a href="./non-pythagorean/index.html">The Non-Pythagorean Theorem</a></h3>
+      <p align="center">
+        <i>"The area of the square on the hypotenuse is equal to<br>the sum of the areas of the squares on the other two sides"</i>
+      </p>
+      <p>
+        This statement has been drummed into students for the last two millenia, and they have always been taught that
+        it was the Greek mathematician and philosopher Pythagoras who first came up with this theorem.
+      </p>
+      <p>
+        The theorem is perfectly correct, but it was discovered at least 1000 years before Pythagoras was born&hellip;
+      </p>
+    </li>
   </ol>
 </body>
 
