--- a/phase-shift/index.html
+++ b/phase-shift/index.html
@@ -77,8 +77,7 @@
         </p>
         <p>
           If you move the "Phase shift" slider over to the far left, then you can see that the blue wave now lines up
-          exactly with the
-          green wave.
+          exactly with the green wave.
           This is because compared to a sine wave, a cosine wave always has a phase shift of 90&deg;.
         </p>
         <p>
@@ -125,61 +124,8 @@
         </p>
       </td>
     </tr>
-    <tr>
-      <td colspan="2" class="description">
-        <h2>The Non-Pythagorean Theorem</h2>
-        <p align="center">
-          <i>"The square on the hypotenuse has an area equal<br>to the sum of the squares on the other two sides"</i>
-        </p>
-        <p>
-          Although no writings of Pythagoras have ever been discovered, by the Late Roman Period, he was already held in
-          high regard as a philosopher and mathematician.
-          Consequently, the discovery of this relationship had already been attributed to him in spite of the fact that
-          it had been widely known for at least 1000 years before Pythagoras' birth.
-          One of the earliest documents known to record this relationship is the <a
-            href="https://en.wikipedia.org/wiki/Berlin_Papyrus_6619" target="_new">Berlin Papyrus 6619</a> written in
-          Ancient Egypt
-          during the 13th Dynasty (1990 - 1800 BC).
-        </p>
-        <p>
-          All that to say, as you drag point `C` around the circle, you'll see that the sum of areas of the two green
-          squares always equals the area of the blue square.
-        </p>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <div id="pythagorasBox" class="pythagorasBox"></div>
-      </td>
-    </tr>
-    <tr>
-      <td colspan="2" class="description">
-        <h2>The Origin of a Trigonometric Identity</h2>
-        <p>
-          Since we have decided to assign this circle a radius of one unit, the definitions of <code>sin(&theta;)</code>
-          and <code>cos(&theta;)</code> can be reduced simply to <code>sin(&theta;) = height</code> and
-          <code>cos(&theta;) = width</code>.
-        </p>
-        <p>
-          This also means that the areas of the various squares shown above will be:
-        <ul>
-          <li>The area of the square on the radius (the hypotenuse) is always equal to 1</li>
-          <li>The area of the square opposite the angle is always equal to <code>height<sup>2</sup></code> which is the
-            same as
-            <code>sin(&theta;)<sup>2</sup></code>
-          </li>
-          <li>The area of the square adjacent to the angle is always equal to <code>width<sup>2</sup></code> which is
-            the same as
-            <code>cos(&theta;)<sup>2</sup></code>
-          </li>
-        </ul>
-        We now have a simple, visual demonstration of the trigonometric identity
-        <code>sin(&theta;)<sup>2</sup> + cos(&theta;)<sup>2</sup> = 1</code>.
-        </p>
-      </td>
-    </tr>
   </table>
-  <script type="text/javascript" src="./phase-shift.js"></script>
+  <script type="text/javascript" src="./main.js"></script>
 </body>
 
 </html>
