--- a/sine-cosine/index.html
+++ b/sine-cosine/index.html
@@ -146,7 +146,7 @@
       </td>
     </tr>
   </table>
-  <script type="text/javascript" src="./generate_sine_cosine.js"></script>
+  <script type="text/javascript" src="./main.js"></script>
 </body>
 
 </html>
