--- a/non-pythagorean/index.html
+++ b/non-pythagorean/index.html
@@ -33,10 +33,11 @@
         <p>
           One of the earliest documents known to record this relationship is the <a
             href="https://en.wikipedia.org/wiki/Berlin_Papyrus_6619" target="_new">Berlin Papyrus 6619</a> written in
-          Ancient Egypt during the 13th Dynasty (1990 - 1800 BC).
+          Ancient Egypt during the 13th Dynasty (1803 - 1649 BC).
         </p>
         <p>
-          All that to say, as you drag point `C` around the circle, you'll see that the sum of the areas of the two green
+          All that to say, as you drag point `C` around the circle, you'll see that the sum of the areas of the two
+          green
           squares always equals the area of the blue square.
         </p>
       </td>
