Add amplitude page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
       </p>
     </li>
     <li>
+      <h3><a href="./amplitude/index.html">Amplitude</a></h3>
+      <p>
+        We have already spoken about two of a wave's three fundamental properties: frequency and phase.
+        Now we'll look at the third fundamental property, amplitude.
+      </p>
+    </li>
+    <li>
       <h3><a href="./non-pythagorean/index.html">The Non-Pythagorean Theorem</a></h3>
       <p align="center">
         <i>"The area of the square on the hypotenuse is equal to<br>the sum of the areas of the squares on the other two sides"</i>
