--- a/non-pythagorean/index.html
+++ b/non-pythagorean/index.html
@@ -18,15 +18,16 @@
 <body>
   <table class="page-table">
     <tr>
-      <td colspan="2" class="description">
+      <td class="description">
         <h2>The Non-Pythagorean Theorem</h2>
         <p align="center">
           <i>"The area of the square on the hypotenuse is equal to<br>the sum of the areas of the squares on the other
             two sides"</i>
         </p>
         <p>
-          Although no writings of Pythagoras have ever been discovered, by the Late Roman Period, he was already held in
-          high regard as a philosopher and mathematician.
+          Although no writings of Pythagoras have ever been discovered, his work was written about extensively by other
+          writers such as Plato and Herodotus.
+          By the Late Roman Period, he was already held in high regard as a philosopher and mathematician.
           Consequently, the discovery of this relationship had already been attributed to him in spite of the fact that
           it had been widely known for at least 1000 years before his birth.
         </p>
@@ -48,12 +49,37 @@
       </td>
     </tr>
     <tr>
-      <td colspan="2" class="description">
+      <td class="description">
+        <h2>That Other Famous Greek, Sohcahtoa</h2>
+        <p>
+          Only kidding, the word SOHCAHTOA is an acronym design to help you remember how the trigonometric functions
+          of sine, cosine and tangent are calculated.
+        </p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p style="width: 50%; margin-left: auto; margin-right: auto;">
+          <img src="/img/sohcahtoa.png" width="600" />
+        </p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <ul>
+          <li>SOH : <b>S</b>ine = <b>O</b>pposite over <b>H</b>ypotenuse</li>
+          <li>CAH : <b>C</b>osine = <b>A</b>djacent over <b>H</b>ypotenuse</li>
+          <li>TOA : <b>T</b>angent = <b>O</b>pposite over <b>A</b>djacent</li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <td class="description">
         <h2>The Origin of a Trigonometric Identity</h2>
         <p>
-          Since we have decided to assign this circle a radius of one unit, the definitions of <code>sin(&theta;)</code>
-          and <code>cos(&theta;)</code> can be reduced simply to <code>sin(&theta;) = height</code> and
-          <code>cos(&theta;) = width</code>.
+          Since we have decided to assign this circle a radius (hypotenuse) of one unit, the definitions of
+          <code>sin(&theta;)</code> and <code>cos(&theta;)</code> can be reduced simply to
+          <code>sin(&theta;) = height</code> and <code>cos(&theta;) = width</code>.
         </p>
         <p>
           This also means that the areas of the various squares shown above will be:
