--- a/sine-cosine/index.html
+++ b/sine-cosine/index.html
@@ -86,8 +86,8 @@
           So when we use the function `sin(&theta;)`, we are really calculating
           <math xmlns="http://www.w3.org/1998/Math/MathML">
             <mfrac>
-              <mi>height</mi>
-              <mi>radius</mi>
+              <mtext>height</mtext>
+              <mtext>radius</mtext>
             </mfrac>
           </math>
         </p>
@@ -97,8 +97,7 @@
         </p>
         <p>
           Similarly, if we know the sine value of an angle, we can turn that fraction back into an angle using the
-          inverse
-          sine function: `&theta; = sin^-1 (value)`. (Also written `arcsin()`)
+          inverse sine function: `&theta; = sin^-1 (value)`. (Also written `arcsin()`)
         </p>
 
         <h3>Cosine</h3>
@@ -110,8 +109,8 @@
           So when we use the function `cos(&theta;)`, we are really calculating
           <math xmlns="http://www.w3.org/1998/Math/MathML">
             <mfrac>
-              <mi>width</mi>
-              <mi>radius</mi>
+              <mtext>width</mtext>
+              <mtext>radius</mtext>
             </mfrac>
           </math>
         </p>
@@ -133,15 +132,14 @@
           If we know the angle &theta;, then the value known as `tan(&theta;)` can be obtained by calculating
           <math xmlns="http://www.w3.org/1998/Math/MathML">
             <mfrac>
-              <mi>height</mi>
-              <mi>width</mi>
+              <mtext>height</mtext>
+              <mtext>width</mtext>
             </mfrac>
           </math>
         </p>
         <p>
           Similarly, if we know the tangent value of an angle, we can turn that value back into an angle using the
-          inverse
-          tangent function: `&theta; = tan^-1(value)` (Also written `arctan()`)
+          inverse tangent function: `&theta; = tan^-1(value)` (Also written `arctan()`)
         </p>
       </td>
     </tr>
