Add Euler and Maclaurin pages

--- a/radians/index.html
+++ b/radians/index.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="https://jsxgraph.org/distrib/jsxgraph.css" />
   <link rel="stylesheet" type="text/css" href="/css/common.css" />
   <script>
     MathJax = {
@@ -10,9 +9,6 @@
     }
   </script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-  <script type="text/javascript" src="https://jsxgraph.org/distrib/jsxgraphcore.js"></script>
-  <script type="text/javascript" src="/utils.js"></script>
-  <script type="text/javascript" src="/jsxgraph_styles.js"></script>
 </head>
 
 <body>
@@ -25,9 +21,9 @@
           A full circle is divided into 360 degrees, so a half turn is 180 degrees, and quarter turn is 90 degrees.
         </p>
         <p>
-          The exact history of why there are <a href="https://en.wikipedia.org/wiki/Degree_(angle)">360 degrees in a
-            circle</a> is unclear, but it most likely related to the fact that there are approximately 360 days in a
-          year, and the Ancient Babylonians used a base 60 (or sexagesimal) counting system.
+          The exact reason for why there are <a href="https://en.wikipedia.org/wiki/Degree_(angle)">360 degrees in a
+            circle</a> is unclear, but it is most likely related to the fact that there are approximately 360 days in a
+          year, and the Ancient Babylonians used both a 360 day calendar and a base 60 (or sexagesimal) counting system.
           It is also a very convenient number for calculating even subdivisions because, except for 7 and 11, it is
           evenly divisible by every number between 2 and 12.
         </p>
