--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 
 <head>
+  <script>
+    MathJax = {
+      loader: { load: ['input/asciimath', 'output/chtml'] }
+    }
+  </script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <link rel="stylesheet" type="text/css" href="./css/common.css" />
 </head>
 
@@ -53,6 +59,27 @@
         called the radian.
       </p>
     </li>
+    <li>
+      <h3><a href="./euler/index.html">Euler's Number</a></h3>
+      <p>
+        In addition to `pi`, there's another mathematical constant that keeps popping up (sometimes when you least
+        expect it) called `e`.
+      </p>
+      <p>
+        In keeping with `pi`, it is impossible to calculate the exact value of `e`; but in spite of this limitation of
+        precision, we need to understand how such a number is derived, because this will open the door to understanding
+        other values we have already encountered.
+      </p>
+    </li>
+    <li>
+      <h3><a href="./maclaurin/index.html">Maclaurin Series</a></h3>
+      <p>
+        The infinite series used to calculate `e^x` is an example of a <a href="https://en.wikipedia.org/wiki/Colin_Maclaurin"
+          target="_new">Maclaurin</a> series.
+        Many other values can be calculated using a Maclaurin series, but the two that are of particular interest to
+        us are the series for calculating sine and cosine.
+      </p>
+  </li>
   </ol>
 </body>
 
