Add imaginary number page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <p>Some introductory explanations for understanding the The Fourier Transform</p>
+  <h1>A Gentle Introduction to Understanding The Fourier Transform</h1>
   <ol>
     <li>
       <h3><a href="./sine-cosine/index.html">Where Do Sine and Cosine Waves Come From?</a></h3>
@@ -74,12 +74,24 @@
     <li>
       <h3><a href="./maclaurin/index.html">Maclaurin Series</a></h3>
       <p>
-        The infinite series used to calculate `e^x` is an example of a <a href="https://en.wikipedia.org/wiki/Colin_Maclaurin"
-          target="_new">Maclaurin</a> series.
+        The infinite series used to calculate `e^x` is an example of a <a
+          href="https://en.wikipedia.org/wiki/Colin_Maclaurin" target="_new">Maclaurin</a> series.
         Many other values can be calculated using a Maclaurin series, but the two that are of particular interest to
         us are the series for calculating sine and cosine.
       </p>
-  </li>
+    </li>
+    <li>
+      <h3><a href="./imaginary/index.html">Imaginary Numbers</a></h3>
+      <p>
+        When you multiply a number by itself, you are "squaring" that number.
+        Reversing this process is called "taking the square root".
+        The point here is that when you square any of the normal counting numbers, the answer will always be positive:
+      </p>
+      <p>
+        But what happens if you need to find the square root of a negative number?
+        Its seems that this simple question causes mathematics to break.
+      </p>
+    </li>
   </ol>
 </body>
 
