Update imaginary number page

--- a/imaginary/index.html
+++ b/imaginary/index.html
@@ -74,7 +74,7 @@
           It represents a real, tangible quantity of physical objects.
         </p>
         <p>
-          But what quantity should we write when calculating `sqrt (-9)`?
+          But what answer should we write when calculating `sqrt (-9)`?
         </p>
         <p>
           It's not `+3` and its not `-3`, but a `3` must be involved somewhere &mdash; and herein lies the problem.
@@ -128,7 +128,8 @@
                 `i^1 = i`<br>
                 `i^2 = i xx i = -1`<br>
                 `i^3 = i xx i xx i = -i`<br>
-                `i^4 = i xx i xx i xx i = 1` (and we're back to one again)
+                `i^4 = i xx i xx i xx i = 1` (and we're back to one again)<br>
+                `i^5 = i xx i xx i xx i xx i = i`
               </p>
             </td>
             <td>
