Update imaginary number page

--- a/imaginary/index.html
+++ b/imaginary/index.html
@@ -98,8 +98,8 @@
           (-1)` simply won't go away.
         </p>
         <p>
-          What mathematicians struggled to accept was the idea that a quantity we cannot count to could be
-          mathematically useful.
+          What mathematicians struggled to accept was the idea that even though we have this strange quantity we cannot
+          count to, it is still mathematically useful (in fact, it turns out to be essential).
         </p>
         <p>
           <a href="https://en.wikipedia.org/wiki/Ren%C3%A9_Descartes" target="_new">Ren&eacute; Descartes</a> was one of
@@ -117,11 +117,12 @@
           <tr>
             <td style="vertical-align: top;">
               <p>
-                Given that these numbers have been labelled "imaginary", and that it would be a pain to continually write
+                Given that these numbers have been labelled "imaginary", and that it would be a pain to continually
+                write
                 `sqrt (-1)` every time we want to refer to this quantity, we just use the letter `i`.
               </p>
               <p>
-                When we now multiply `i` by itself and increasing number of times, we get the following cycle of values:
+                When we now multiply `i` by itself an increasing number of times, we get the following cycle of values:
               </p>
               <p>
                 `i^0 = 1`<br>
