Add Eulers Formula page

--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
         Its seems that this simple question causes mathematics to break.
       </p>
     </li>
+    <li>
+      <h3><a href="./euler-formula/index.html">Euler's Formula and Identity</a></h3>
+      <p>
+        We will now combine what we've learnt about using Maclaurin series to express the values of `e^x`,
+        `sin(&theta;)` and `cos(&theta;)`, with what we've learnt about the cycle of values created we raising `i` to
+        various integer powers to derive firstly, Euler's Formula, and secondly, Euler's famous Identity.
+      </p>
+    </li>
   </ol>
 </body>
 
