Update imaginary page

--- a/imaginary/index.html
+++ b/imaginary/index.html
@@ -113,13 +113,24 @@
           It's unfortunate, but this name has stuck.
         </p>
         <h3>The <i>i</i>'s Have It</h3>
+        <p>
+          Given that these numbers have been labelled "imaginary", and that it would be a pain to continually
+          write
+          `sqrt (-1)` every time we want to refer to this quantity, we just use the letter `i`.
+        </p>
         <table>
           <tr>
             <td style="vertical-align: top;">
               <p>
-                Given that these numbers have been labelled "imaginary", and that it would be a pain to continually
-                write
-                `sqrt (-1)` every time we want to refer to this quantity, we just use the letter `i`.
+                When you multiply this imaginary number `i` by itself, depending on the number of multiplications you
+                perform, the will answer alternate between a real number (that is, one you can count to such as `+1` or
+                `-1`) and another imaginary number (such as `i` or `-i`).
+              </p>
+              <p>
+                If we want to display such numbers on a graph, then the convention is to plot real numbers on the X
+                axis,
+                and imaginary numbers on the Y axis.
+                Such a graph looks like the one to the right:
               </p>
               <p>
                 When we now multiply `i` by itself an increasing number of times, we get the following cycle of values:
