Update euler-formula page

--- a/euler-formula/index.html
+++ b/euler-formula/index.html
@@ -107,7 +107,12 @@
           `e^(ix) = cos(x) + i sin(x)`
         </p>
         <p>
-          This is known as Euler's Formula
+          This is known as Euler's Formula.
+        </p>
+        <p>
+          The presence of `i` in the formula is very important because it helps keep the various terms separate.
+          Those terms that contribute towards the calculation of the cosine value do not have `i` in their definition,
+          but those terms that contribute to the calculation of the sine value do have `i` in them.
         </p>
         <h3>Euler's Identity - A Special Case of Euler's Formula</h3>
         <p>
