Update imaginary page

--- a/imaginary/index.html
+++ b/imaginary/index.html
@@ -74,7 +74,7 @@
           It represents a real, tangible quantity of physical objects.
         </p>
         <p>
-          But what answer should we write when calculating `sqrt (-9)`?
+          But what answer should we write when attempting to calculate `sqrt (-9)`?
         </p>
         <p>
           It's not `+3` and its not `-3`, but a `3` must be involved somewhere &mdash; and herein lies the problem.
@@ -86,44 +86,58 @@
           If this makes your brain hurt, then don't worry &mdash; you're in good company.
         </p>
         <p>
-          Mathematicians found the concept of <i>"a number you cannot count to"</i> deeply perplexing as there just
-          doesn't seem to be an intuitive way to conceptualise such a quantity.
+          Mathematicians found the concept of <i>"a number you cannot count to"</i> deeply perplexing as there is no
+          intuitive way to conceptualise a quantity that has no tangible meaning in the material world.
         </p>
         <p>
-          We can come close by rewriting `-9` as `9 xx -1`.
+          So what meaning can we give to the statement `sqrt (-9)`?
+        </p>
+        <p>
+          We best we can do is to rewrite `-9` as `9 xx -1`.
           Then at least we can calculate the square root of the positive part.
-        </p>
-        <p>
           `sqrt (9 xx -1)` simplifies to `3 xx sqrt (-1)`, but this is only a partial result because that pesky `sqrt
           (-1)` simply won't go away.
         </p>
         <p>
-          What mathematicians struggled to accept was the idea that even though we have this strange quantity we cannot
-          count to, it is still mathematically useful (in fact, it turns out to be essential).
+          What mathematicians struggled to accept was the idea that even though we have this strange, intangible
+          quantity, it is still mathematically useful and relevant (in fact, as Euler later demonstrated, it turned out
+          to be essential).
         </p>
         <p>
           <a href="https://en.wikipedia.org/wiki/Ren%C3%A9_Descartes" target="_new">Ren&eacute; Descartes</a> was one of
-          many mathematicians who found that he just could not make these perplexing quantities go away.
+          many mathematicians who found these quantites deeply perplexing.
+          Like so many of his contemporaries, he was unwilling to accept the intellectual discomfort created by a
+          quantity that appeared to have no direct applicability in the material world.
+        </p>
+        <p>
+          You can hold `1` apple in your hand, but what does it mean to say <i>"I am holding `sqrt (-1)` apples"</i>?
+        </p>
+        <p>
+          Can this statement even be considered valid?
+        </p>
+        <p>
+          For a philosopher such as Descartes, the idea that mathematics should contain a type of quantity you cannot
+          count to create deep philosophical problems.
           So in his frustration (and no doubt, a certain degree of irritation), he gave these numbers the rather
           derogatory title of <a href="https://en.wikipedia.org/wiki/Imaginary_number#History"
             target="_new">"imaginary"</a>
-          because to him, they did not represent anything "real".
+          because to him, they could not be made to represent anything in the "real" world.
         </p>
         <p>
           It's unfortunate, but this name has stuck.
         </p>
         <h3>The <i>i</i>'s Have It</h3>
         <p>
-          Given that these numbers have been labelled "imaginary", and that it would be a pain to continually
-          write
-          `sqrt (-1)` every time we want to refer to this quantity, we just use the letter `i`.
+          Given that these numbers have been labelled "imaginary", and that it is awkward to continually have to write
+          `sqrt (-1)` every time we want to refer to this quantity, mathematicians just use the letter `i` (Physicists
+          however, tend to use the letter `j` instead).
         </p>
         <table>
           <tr>
             <td style="vertical-align: top;">
               <p>
                 When you multiply this imaginary number `i` by itself, depending on the number of multiplications you
-                perform, the will answer alternate between a real number (that is, one you can count to such as `+1` or
+                perform, the answer alternates between a real number (that is, one you can count to such as `+1` or
                 `-1`) and another imaginary number (such as `i` or `-i`).
               </p>
               <p>
