Add complex numbers page

--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
         various integer powers to derive firstly, Euler's Formula, and secondly, Euler's famous Identity.
       </p>
     </li>
+    <li>
+      <h3><a href="./complex-nums/index.html">Complex Numbers</a></h3>
+      <p>
+        Now that we have encountered this <i>strange-but-very-important-number-that-you-cannot-count-to</i> called `i` or `sqrt
+        (-1)`, we need to look at performing arithmetic using `i`.
+      </p>
+    </li>
   </ol>
 </body>
 
