Add complex arithmetic page

--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
         (-1)`, we need to look at performing arithmetic using `i`.
       </p>
     </li>
+    <li>
+      <h3><a href="./complex-arith/index.html">Arithmetic with Complex Numbers</a></h3>
+      <p>
+        We will now take a look at performing arithmetic using complex numbers.
+      </p>
+    </li>
   </ol>
 </body>
 
